
- PCRE:
  . Removed support for the /e (PREG_REPLACE_EVAL) modifier. (Nikita)

- PDO:
  . Fixed bug #59450 (./configure fails with "Cannot find php_pdo_driver.h").
    (maxime dot besson at smile dot fr)

- PDO_mysql:
  . Fixed bug #68424 (Add new PDO mysql connection attr to control multi
    statements option). (peter dot wolanin at acquia dot com)

- Reflection
  . Fixed inheritance chain of Reflector interface. (Tjerk)

- Session:
  . Fixed bug #67694 (Regression in session_regenerate_id()). (Tjerk)
  . Fixed bug #68941 (mod_files.sh is a bash-script). (bugzilla at ii.nl, Yasuo)

- SOAP:
  . Fixed bug #68361 (Segmentation fault on SoapClient::__getTypes). (Laruence)

- SPL:
  . Changed ArrayIterator implementation using zend_hash_iterator_... API.
    Allowed modification of iterated ArrayObject using the same behavior
    as proposed in `Fix "foreach" behavior`. Removed "Array was modified
    outside object and internal position is no longer valid" hack. (Dmitry)
  . Implemented #67886 (SplPriorityQueue/SplHeap doesn't expose extractFlags
    nor curruption state). (Julien)
  . Fixed bug #66405 (RecursiveDirectoryIterator::CURRENT_AS_PATHNAME
    breaks the RecursiveIterator). (Paul Garvin)
  . Fixed bug #68479 (Added escape parameter to SplFileObject::fputcsv). (Salathe)

- Sqlite3:
  . Fixed bug #68260 (SQLite3Result::fetchArray declares wrong
    required_num_args). (Julien)

- Standard:
  . Fixed bug #69325 (php_copy_file_ex does not pass the argument).
    (imbolk at gmail dot com)
  . Fixed bug #69299 (Regression in array_filter's $flag argument in PHP 7).
    (Laruence)
  . Removed call_user_method() and call_user_method_array() functions. (Kalle)
  . Fixed user session handlers (See rfc:session.user.return-value). (Sara)
  . Added intdiv() function. (Andrea)
  . Improved precision of log() function for base 2 and 10. (Marc Bennewitz)
  . Remove string category support in setlocale(). (Nikita)